# FIT

./: README.md
CD/: README
CD/technicka_zprava/zdrojove_kody/tisk_src/xskuto00/: xskuto00-Sprava-fotografii-01-kapitoly-chapters.tex  xskuto00-Sprava-fotografii-20-literatura-bibliography.bib  xskuto00-Sprava-fotografii.tex
CD/technicka_zpravaJ/zdrojove_kody/wis_src/xskuto00/: Makefile  xskuto00-Sprava-fotografii.tex
CD/zdrojove_kody/: CMakeLists.txt
CD/zdrojove_kody/src/: allfoto.cpp  allfoto.h  duplicita.cpp  duplicita.h  duplicitnifoto.cpp  duplicitnifoto.h  duplikatyitemwidget.cpp  duplikatyitemwidget.h  duplikatyskupitemwidget.cpp  duplikatyskupitemwidget.h  duplikatyskuppicturewidget.cpp  duplikatyskuppicturewidget.h  exifdateitemwidget.cpp  exifdateitemwidget.h  exifitemwidget.cpp  exifitemwidget.h  exifpanel.cpp  exifpanel.h  foto.cpp  foto.h  fotofile.cpp  fotofile.h  fotoitemwidget.cpp  fotoitemwidget.h  fotopicturewidget.cpp  fotopicturewidget.h  fotowidget.cpp  fotowidget.h  mainwindow.cpp  mainwindow.h  mexif.cpp  mexif.h  skupina.cpp  skupina.h  skupinydialog.cpp  skupinydialog.h  skupinyitemwidget.cpp  skupinyitemwidget.h  xskuto00_IBP.pro
